# markdown-opener

./: .gitignore  LICENSE  README.md  build.ps1  index.html  init-tauri.ps1  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
code/: CODE_REVIEW.md  DEEP_REVIEW.md  TROUBLESHOOTING.md  debug_taskmind.py  light-brain-analysis.md  multi_processor_agent.py  multi_processor_agent_design.md  prefrontal_agent.py  prefrontal_agent_design.md  taskmind_fix_test.py  taskmind_os.py  taskmind_os_fixed.py
src/: main.ts  style.css  tauri-types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
